deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: expense-app
  template:
    metadata:
      labels:
        app: expense-app
    spec:
      containers:
        - name: expense-container
          image: expense-tracker:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
